# crf-annotation-mcp

./: .gitignore  GITHUB_PUBLISH.md  LICENSE  LINKEDIN_POST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  YOUTUBE_SCRIPT.md  pyproject.toml
docs/: PROJECT_SUMMARY.md  QUICKSTART.md  TODO.md
examples/: example_usage.py  test_simple.py
src/crf_annotation_mcp/: __init__.py  models.py  parser.py  query.py  server.py
tests/: __init__.py  test_parser.py  test_query.py
